# aerostack-swarm-drone-traversal

./: .gitignore  LICENCE  README.md
aerostack2/as2_behaviors/as2_behaviors_platform/src/: set_arming_state_behavior_main.cpp
aerostack2/as2_simulation_assets/as2_gazebo_assets/scripts/: jinja_gen.py
aerostack2/as2_simulation_assets/as2_gazebo_assets/src/as2_gazebo_assets/models/: drone.py
as2_platform_crazyflie/: CHANGELOG.rst  CMakeLists.txt  package.xml
as2_platform_crazyflie/.github/workflows/: build_humble.yaml
as2_platform_crazyflie/as2_platform_crazyflie/: viewer.py
as2_platform_crazyflie/config/: aideck_config_file.yaml  camera_calibration.yaml  swarm_config_file.yaml
as2_platform_crazyflie/include/as2_platform_crazyflie/: crazyflie_platform.hpp
as2_platform_crazyflie/launch/: crazyflie_aideck_stream_launch.py  crazyflie_swarm_launch.py
as2_platform_crazyflie/scripts/: aideck_node.py
as2_platform_crazyflie/src/: crazyflie_node.cpp  crazyflie_platform.cpp  crazyflie_swarm_nodes.cpp
challenge_multi_drone/: approach1.py  central.py  mapf_scenario_1.py  mapf_scenario_2.py  mapf_scenario_3.py  mapf_scenario_4.py  mapf_utils.py  mission_swarm.py  solution1.py  track_drone_paths.py
challenge_multi_drone/config_sim/gazebo/plugins/dynamic_moving_objects/: CMakeLists.txt
